--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "@hapi/hapi": "^19.1.0"
   },
   "devDependencies": {
-    "@types/hapi": "^18.0.3",
+    "@hapi/code": "^8.0.1",
+    "@hapi/lab": "^22.0.3",
+    "@types/hapi__hapi": "^19.0.1",
     "@types/node": "^13.7.0",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
