--- a/package.json
+++ b/package.json
@@ -31,15 +31,21 @@
   },
   "homepage": "https://github.com/escalonc/quark-service#readme",
   "dependencies": {
-    "@hapi/hapi": "^19.1.0"
-  },
-  "devDependencies": {
+    "@hapi/hapi": "^19.1.0",
     "@hapi/code": "^8.0.1",
     "@hapi/glue": "^7.0.0",
     "@hapi/inert": "^6.0.1",
     "@hapi/joi": "^17.1.0",
     "@hapi/lab": "^22.0.3",
     "@hapi/vision": "^6.0.0",
+    "confidence": "^4.0.2",
+    "good": "^8.1.2",
+    "good-console": "^8.0.0",
+    "hapi-auth-bearer-token": "^6.1.4",
+    "hapi-swagger": "^12.1.0",
+    "fast-glob": "^3.1.1"
+  },
+  "devDependencies": {
     "@types/confidence": "^1.4.30",
     "@types/hapi__glue": "^6.1.0",
     "@types/hapi__hapi": "^19.0.1",
@@ -47,16 +53,8 @@
     "@types/node": "^13.7.0",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
-    "confidence": "^4.0.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
-    "fast-glob": "^3.1.1",
-    "good": "^8.1.2",
-    "good-console": "^8.0.0",
-    "hapi-auth-bearer-token": "^6.1.4",
-    "hapi-swagger": "^12.1.0",
-    "hapi-swaggered": "^3.0.3",
-    "hapi-swaggered-ui": "^2.6.2",
     "husky": "^4.2.1",
     "lint-staged": "^10.0.7",
     "nodemon": "^2.0.2",
