Working on data access layer

--- a/package.json
+++ b/package.json
@@ -31,25 +31,27 @@
   },
   "homepage": "https://github.com/escalonc/quark-service#readme",
   "dependencies": {
-    "@hapi/hapi": "^19.1.0",
     "@hapi/code": "^8.0.1",
     "@hapi/glue": "^7.0.0",
+    "@hapi/hapi": "^19.1.0",
     "@hapi/inert": "^6.0.1",
     "@hapi/joi": "^17.1.0",
     "@hapi/lab": "^22.0.3",
     "@hapi/vision": "^6.0.0",
     "confidence": "^4.0.2",
+    "fast-glob": "^3.1.1",
     "good": "^8.1.2",
     "good-console": "^8.0.0",
     "hapi-auth-bearer-token": "^6.1.4",
     "hapi-swagger": "^12.1.0",
-    "fast-glob": "^3.1.1"
+    "mysql2": "^2.1.0"
   },
   "devDependencies": {
     "@types/confidence": "^1.4.30",
     "@types/hapi__glue": "^6.1.0",
     "@types/hapi__hapi": "^19.0.1",
     "@types/joi": "^14.3.4",
+    "@types/mysql2": "github:types/mysql2",
     "@types/node": "^13.7.0",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
